# recipe-box-assessment

./: README.md  db.sqlite3  pyproject.toml
homepage/: admin.py  forms.py  models.py  views.py
homepage/migrations/: 0001_initial.py  0002_auto_20200807_1640.py  0002_recipe_favorite.py  0003_auto_20200910_1441.py  0004_auto_20200910_1442.py
recipebox/: settings.py  urls.py
templates/: author_details.html  index.html  post_detail.html
